# tch-rs

torch-sys/: build.rs
torch-sys/libtch/: CMakeLists.txt  torch_api.cpp
